more from my other file

--- a/index.html
+++ b/index.html
@@ -19,23 +19,44 @@
     </header>
 
     <main>
-      <section class="column">
-        <h2>Välkommen till vår makeup tutorial-webbplats</h2>
-        <p>
-          Här hittar du massor av användbara makeup tips och tricks för att
-          uppnå den perfekta looken.
-        </p>
-        <img src="makeup.jpg" alt="Makeup Example" />
-      </section>
-
-      <section class="column">
-        <h2>Senaste Tutorials</h2>
-        <ul>
-          <li><a href="#">Tutorial 1: Smokey Eyes</a></li>
-          <li><a href="#">Tutorial 2: Naturlig Makeup</a></li>
-          <li><a href="#">Tutorial 3: Konturering</a></li>
-        </ul>
-      </section>
+      <div id="intro">
+        <section>
+          <h2>Välkommen till vår makeup tutorial-webbplats</h2>
+          <p>
+            Här hittar du massor av användbara makeup tips och tricks för att
+            uppnå den perfekta looken. Kolla in våra video-toutorials under
+            fliken tutorials, eller läs veckans how to´s nedanför.
+          </p>
+          <img
+            src="pics/cosmetics-7050541_1280 (kopia).jpeg"
+            alt="Picture of makeup"
+          />
+        </section>
+      </div>
+      <div id="artiklar">
+        <article>
+          <img
+            src="pics/makeup-739672_1280 (kopia)"
+            alt="Eye close up of model wearing false eyelashes"
+          />
+          <h2>How To Apply False Eyelashes</h2>
+          <p>
+            Discover how to apply false eyelashes to make your eyes stand out.
+          </p>
+          <a href="länk här till en sida">Read More</a>
+        </article>
+        <article>
+          <img
+            src="pics/makeup-739672_1280 (kopia)"
+            alt="Eye close up of model wearing false eyelashes"
+          />
+          <h2>How To Apply False Eyelashes</h2>
+          <p>
+            Discover how to apply false eyelashes to make your eyes stand out.
+          </p>
+          <a href="länk här till en sida">Read More</a>
+        </article>
+      </div>
     </main>
 
     <footer>
