--- a/tutorials.html
+++ b/tutorials.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style1.css" />
+    <link rel="stylesheet" href="layout.css" />
+    <link rel="stylesheet" href="presentation.css" />
     <title>Tutorials- Makeup Tutorial</title>
   </head>
   <body>
@@ -12,8 +13,8 @@
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="tutorials/index.html">Tutorials</a></li>
-          <li><a href="about/index.html">About</a></li>
+          <li><a href="tutorials.html">Tutorials</a></li>
+          <li><a href="about.html">Home</a></li>
         </ul>
       </nav>
     </header>
