--- a/tutorials.html
+++ b/tutorials.html
@@ -20,12 +20,11 @@
     </header>
 
     <main>
-      <section class="column">
-        <h2>Tutorials</h2>
+      <section class="tutorials">
+        <h2>tutorials</h2>
         <ul>
-          <li>
-            <h2>Keep your summer glow</h2>
-            <!-- use style="border: none; i CSS för att få bort kanten-->
+          <li class="video">
+            <h3>Keep your summer glow</h2>
             <iframe
               width="560"
               height="315"
@@ -36,8 +35,8 @@
             ></iframe>
             <p>Fall is here. Here is how you extend that summer glow.</p>
           </li>
-          <li>
-            <h2>Two eyeliner techniques for hooded eyes</h2>
+          <li class="video">
+            <h3>Two eyeliner techniques for hooded eyes</h2>
             <iframe
               width="560"
               height="315"
@@ -52,8 +51,8 @@
               Which side do you like the most?
             </p>
           </li>
-          <li>
-            <h2>How to apply the base tutorial</h2>
+          <li class="video">
+            <h3>How to apply the base tutorial</h2>
             <iframe
               width="560"
               height="315"
@@ -68,7 +67,7 @@
             </p>
           </li>
 
-          <li>
+          <li class="video">
             <h2>Done Quick - Daily makeup routine</h2>
             <iframe
               width="560"
