--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="sv">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" mid="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="layout.css" />
-    <link rel="stylesheet" href="presentation.css" />
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <link rel="stylesheet" href="layout.css" >
+    <link rel="stylesheet" href="presentation.css" >
     <title>LH Cosmetics</title>
   </head>
   <body>
@@ -29,88 +29,85 @@
         </p>
       </section>
 
-
-
       <!--vad menas med loading lazy? och lägg till rätt info i artiklarna-->
       <section class="article-container">
+        <h2>How to´s</h2>
+        <p>
+          Discover magical beauty tutorials including skincare advice and makeup
+          tutorials! From how to get glowing skin to wedding, halloween and
+          party makeup tutorials, there's so much to be discovered!
+        </p>
         <article class="card">
           <a href="">
             <div class="top">
               <div class="image-container">
-                <img
-                  alt=""
-                  loading="lazy"
-                  src="pictures/woman-3096664_1280"
-                />
+                <img alt="" loading="lazy" src="pictures/woman-3096664_1280" >
               </div>
             </div>
             <div class="mid">
-              <h3><span class="title">Rubrik nummer ett</span></h2>
+              <h3><span class="title">Rubrik nummer ett</span></h3>
               <p class="description">
-                Detta är en beskrivning som ska vara tillräckligt lång men absolut inte allt för lång utan 
+                Detta är en beskrivning som ska vara tillräckligt lång men
+                absolut inte allt för lång utan
               </p>
             </div>
-              <div class="bottom" type="button">
-                <span class="btn">Read More</span>
-              </div>
+            <div class="bottom">
+              <span class="btn">Read More</span>
             </div>
           </a>
         </article>
 
         <article class="card">
-            <a href="">
-              <div class="top">
-                <div class="image-container">
-                  <img
-                    alt=""
-                    loading="lazy" 
-                    src="pictures/woman-3096664_1280"
-                  />
-                </div>
+          <a href="">
+            <div class="top">
+              <div class="image-container">
+                <img alt="" loading="lazy" src="pictures/woman-3096664_1280" >
               </div>
-              <div class="mid">
-                <h3><span class="title">Här är rubrik på artikel nummer två</span></h2>
-                <p class="description">
-                    Detta är en beskrivning som ska vara tillräckligt lång men absolut inte allt för lång utan bara så att man ser hur det ser ut
-                </p>
-              </div>
-                <div class="bottom" type="button">
-                  <span class="btn">Read More</span>
-                </div>
-              </div>
-            </a>
-          </article>
+            </div>
+            <div class="mid">
+              <h3>
+                <span class="title">Här är rubrik på artikel nummer två</span>
+              </h3>
+              <p class="description">
+                Detta är en beskrivning som ska vara tillräckligt lång men
+                absolut inte allt för lång utan bara så att man ser hur det ser
+                ut
+              </p>
+            </div>
+            <div class="bottom">
+              <span class="btn">Read More</span>
+            </div>
+          </a>
+        </article>
 
-          <article class="card">
-            <a href="">
-              <div class="top">
-                <div class="image-container">
-                  <img
-                    alt=""
-                    loading="lazy"
-                    src="pictures/woman-3096664_1280"
-                  />
-                </div>
+        <article class="card">
+          <a href="">
+            <div class="top">
+              <div class="image-container">
+                <img alt="" loading="lazy" src="pictures/woman-3096664_1280" >
               </div>
-              <div class="mid">
-                <h3><span class="title">Wow detta är var du hittar rubrik nummer tre</span></h2>
-                <p class="description">
-                  Detta är en beskrivning som ska är kortare
-                </p>
-              </div>
-                <div class="bottom" type="button">
-                  <span class="btn">Read More</span>
-                </div>
-              </div>
-            </a>
-          </article>
-
-        
+            </div>
+            <div class="mid">
+              <h3>
+                <span class="title"
+                  >Wow detta är var du hittar rubrik nummer tre</span
+                >
+              </h3>
+              <p class="description">
+                Detta är en beskrivning som ska är kortare
+              </p>
+            </div>
+            <div class="bottom">
+              <span class="btn">Read More</span>
+            </div>
+          </a>
+        </article>
       </section>
     </main>
 
     <footer>
-      <p>&copy; 2023 Makeup Tutorial</p>
+      <div class="footer"> <p>&copy 2023 Makeup Tutorial</p>
+      </div>
     </footer>
   </body>
 </html>
