--- a/tutorials.html
+++ b/tutorials.html
@@ -87,7 +87,8 @@
     </main>
 
     <footer>
-      <p>&copy; 2023 Makeup Tutorial</p>
+      <div class="footer"> <p>&copy 2023 Makeup Tutorial</p>
+      </div>
     </footer>
   </body>
 </html>
