--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="sv">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <link rel="stylesheet" href="layout.css" />
     <link rel="stylesheet" href="presentation.css" />
     <title>About</title>
@@ -83,7 +83,8 @@
     </main>
 
     <footer>
-      <p>&copy; 2023 Makeup Tutorial</p>
+      <div class="footer"> <p>&copy 2023 Makeup Tutorial</p>
+      </div>
     </footer>
   </body>
 </html>
