--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="tutorials.html">Tutorials</a></li>
-          <li><a href="about.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
 
         </ul>
       </nav>
@@ -83,8 +83,10 @@
     </main>
 
     <footer>
-      <div class="footer"> <p>&copy 2023 Makeup Tutorial</p>
+      <div class="footer">
+        <p>&copy; 2023 Makeup Tutorial</p>
       </div>
+      
     </footer>
   </body>
 </html>
