--- a/tutorials.html
+++ b/tutorials.html
@@ -14,7 +14,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="tutorials.html">Tutorials</a></li>
-          <li><a href="about.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
         </ul>
       </nav>
     </header>
@@ -24,7 +24,7 @@
         <h2>tutorials</h2>
         <ul>
           <li class="video">
-            <h3>Keep your summer glow</h2>
+            <h3>Keep your summer glow</h3>
             <iframe
               width="560"
               height="315"
@@ -36,7 +36,7 @@
             <p>Fall is here. Here is how you extend that summer glow.</p>
           </li>
           <li class="video">
-            <h3>Two eyeliner techniques for hooded eyes</h2>
+            <h3>Two eyeliner techniques for hooded eyes</h3>
             <iframe
               width="560"
               height="315"
@@ -52,7 +52,7 @@
             </p>
           </li>
           <li class="video">
-            <h3>How to apply the base tutorial</h2>
+            <h3>How to apply the base tutorial</h3>
             <iframe
               width="560"
               height="315"
@@ -68,7 +68,7 @@
           </li>
 
           <li class="video">
-            <h2>Done Quick - Daily makeup routine</h2>
+            <h3>Done Quick - Daily makeup routine</h3>
             <iframe
               width="560"
               height="315"
@@ -87,8 +87,10 @@
     </main>
 
     <footer>
-      <div class="footer"> <p>&copy 2023 Makeup Tutorial</p>
+      <div class="footer">
+        <p>&copy; 2023 Makeup Tutorial</p>
       </div>
+      
     </footer>
   </body>
 </html>
