fixup i think all except about page

--- a/tutorials.html
+++ b/tutorials.html
@@ -20,8 +20,22 @@
     </header>
 
     <main>
+      <section id="page-intro">
+        <h2>Tutorials</h2>
+        <p>
+          här hittar du en liten samling video tutorials som är utformade för
+          att guida dig steg för steg genom olika makeup-tekniker. Våra
+          makeup-experter delar med sig av sina hemligheter och ger dig de bästa
+          tipsen för att uppnå en professionell look. Oavsett om du vill
+          behärska smokey eyes, contouring, eller skapa den perfekta röda
+          läppen, våra tutorials är här för att hjälpa dig. Vi förstår att varje
+          person har sin egen unika stil och sminkpreferens. Därför inkluderar
+          våra tutorials olika looks, från naturlig vardagsmakeup till glamorösa
+          festmakeuper. Du kommer att lära dig användbara tekniker och få insikt
+          i de senaste trenderna inom makeupvärlden.
+        </p>
+      </section>
       <section class="tutorials">
-        <h2>tutorials</h2>
         <ul>
           <li class="video">
             <h3>Keep your summer glow</h3>
@@ -90,7 +104,6 @@
       <div class="footer">
         <p>&copy; 2023 Makeup Tutorial</p>
       </div>
-      
     </footer>
   </body>
 </html>
