fix almost done start page, starting with tutorials

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
          
         </p>
       </section>
-      <section class="about">
+      <section id="about">
         <div class="teamet">
         <h3>Teamet bakom LH Cosmetics</h3>
         <p>
