--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
       </section>
 
       <!--vad menas med loading lazy? och lägg till rätt info i artiklarna-->
-      <section class="article-container">
-        <div class="article-description">
-          <h2>How to´s</h2>
+      <section id="how-to" class="flexbox">
+        <div>
+          <h2 class="uppercase">How to´s</h2>
           <p>
             Här har vi samlat tre artiklar som vi rekommenderar för läsning
             denna månaden. Dessa artiklar är utvalda av vårt team av
@@ -62,7 +62,7 @@
               </div>
             </div>
             <div class="mid">
-              <h3><span class="title">Rubrik nummer ett</span></h3>
+              <h3 class="uppercase">Detta är en rubrik för artikeln</h3>
               <p class="description">
                 Detta är en beskrivning som ska vara tillräckligt lång men
                 absolut inte allt för lång utan
