--- a/tutorials.html
+++ b/tutorials.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="layout.css" />
-    <link rel="stylesheet" href="presentation.css" />
+    <link rel="stylesheet" href="test.css" />
     <title>Tutorials- Makeup Tutorial</title>
   </head>
   <body>
@@ -35,13 +34,11 @@
           i de senaste trenderna inom makeupvärlden.
         </p>
       </section>
-      <section class="tutorials">
+      <section id="tutorials">
         <ul>
           <li class="video">
             <h3>Keep your summer glow</h3>
             <iframe
-              width="560"
-              height="315"
               src="https://www.youtube.com/embed/nE77vzb4Os4?si=6sZ9yeMlOpmcpgn6"
               title="YouTube video player"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
