--- a/tutorials.html
+++ b/tutorials.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="test.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Tutorials- Makeup Tutorial</title>
   </head>
   <body>
@@ -36,7 +36,7 @@
       </section>
       <section id="tutorials">
         <ul>
-          <li class="video">
+          <li>
             <h3>Keep your summer glow</h3>
             <iframe
               src="https://www.youtube.com/embed/nE77vzb4Os4?si=6sZ9yeMlOpmcpgn6"
@@ -46,11 +46,9 @@
             ></iframe>
             <p>Fall is here. Here is how you extend that summer glow.</p>
           </li>
-          <li class="video">
+          <li >
             <h3>Two eyeliner techniques for hooded eyes</h3>
             <iframe
-              width="560"
-              height="315"
               src="https://www.youtube.com/embed/kqKr3NrQ0n0?si=l7w2lbZ3PHvBvvE8"
               title="YouTube video player"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -62,11 +60,9 @@
               Which side do you like the most?
             </p>
           </li>
-          <li class="video">
+          <li >
             <h3>How to apply the base tutorial</h3>
             <iframe
-              width="560"
-              height="315"
               src="https://www.youtube.com/embed/AY02r-6wuCE?si=6p4opujgrGxJTCW1"
               title="YouTube video player"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -78,11 +74,9 @@
             </p>
           </li>
 
-          <li class="video">
+          <li >
             <h3>Done Quick - Daily makeup routine</h3>
             <iframe
-              width="560"
-              height="315"
               src="https://www.youtube.com/embed/2Sok_c8__Bs?si=yaU9vd5uOcrl4sCb"
               title="YouTube video player"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
